# codebud

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  run_agent.py
agent/: __init__.py  core.py  executor.py  llm_stub.py  memory.py  planner.py  safety.py  sandbox.py
agent/cli/: display.py  doctor.py  errors.py
agent/tools/: __init__.py  commands.py  embeddings.py  file_io.py  patcher.py  tool_registry.py  web_search.py
config/: harmless_commands.json  powerful_commands.json  trusted_sequences.json
docs/: Makefile  README.md  codebud.texi  version.texi
docs/chapters/: architecture.texi  configuration.texi  development.texi  glossary.texi  installation.texi  introduction.texi  llm-execution.texi  model-management.texi  performance-benchmarking.texi  safety-and-sandbox.texi  tools-reference.texi  troubleshooting.texi  usage.texi
openclaw/: SKILL.md  __init__.py  main.py  register.py  skill.py
scripts/: benchmark.py
tests/: test_cli.py  test_llm_stub.py  test_openclaw_skill.py  test_planner.py  test_safety_executor_patcher.py
