[project]
name = "codebud"
version = "1.0.0"
description = "A Cursor-style local coding agent with OpenClaw integration."
authors = [
    { name = "Behzad" }
]
requires-python = ">=3.10"
dependencies = [
    "openai",
    "requests",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
codebud = "run_agent:main"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.setuptools]
py-modules = ["run_agent"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
